--- a/spec/mustache/specs/inverted.yml
+++ b/spec/mustache/specs/inverted.yml
@@ -37,44 +37,44 @@ tests:
   - name: Falsey
     desc: Falsey sections should have their contents rendered.
     data: { boolean: false }
-    template: '"{{^boolean}}This should be rendered.{{/boolean}}"'
+    template: '"<{{^boolean}}>This should be rendered.<{{/boolean}}>"'
     expected: '"This should be rendered."'
 
   - name: Truthy
     desc: Truthy sections should have their contents omitted.
     data: { boolean: true }
-    template: '"{{^boolean}}This should not be rendered.{{/boolean}}"'
+    template: '"<{{^boolean}}>This should not be rendered.<{{/boolean}}>"'
     expected: '""'
 
   - name: Context
     desc: Objects and hashes should behave like truthy values.
     data: { context: { name: 'Joe' } }
-    template: '"{{^context}}Hi {{name}}.{{/context}}"'
+    template: '"<{{^context}}>Hi <{{name}}>.<{{/context}}>"'
     expected: '""'
 
   - name: List
     desc: Lists should behave like truthy values.
     data: { list: [ { n: 1 }, { n: 2 }, { n: 3 } ] }
-    template: '"{{^list}}{{n}}{{/list}}"'
+    template: '"<{{^list}}><{{n}}><{{/list}}>"'
     expected: '""'
 
   - name: Empty List
     desc: Empty lists should behave like falsey values.
     data: { list: [ ] }
-    template: '"{{^list}}Yay lists!{{/list}}"'
+    template: '"<{{^list}}>Yay lists!<{{/list}}>"'
     expected: '"Yay lists!"'
 
   - name: Doubled
     desc: Multiple inverted sections per template should be permitted.
     data: { bool: false, two: 'second' }
     template: |
-      {{^bool}}
+      <{{^bool}}>
       * first
-      {{/bool}}
-      * {{two}}
-      {{^bool}}
+      <{{/bool}}>
+      * <{{two}}>
+      <{{^bool}}>
       * third
-      {{/bool}}
+      <{{/bool}}>
     expected: |
       * first
       * second
@@ -83,19 +83,19 @@ tests:
   - name: Nested (Falsey)
     desc: Nested falsey sections should have their contents rendered.
     data: { bool: false }
-    template: "| A {{^bool}}B {{^bool}}C{{/bool}} D{{/bool}} E |"
+    template: "| A <{{^bool}}>B <{{^bool}}>C<{{/bool}}> D<{{/bool}}> E |"
     expected: "| A B C D E |"
 
   - name: Nested (Truthy)
     desc: Nested truthy sections should be omitted.
     data: { bool: true }
-    template: "| A {{^bool}}B {{^bool}}C{{/bool}} D{{/bool}} E |"
+    template: "| A <{{^bool}}>B <{{^bool}}>C<{{/bool}}> D<{{/bool}}> E |"
     expected: "| A  E |"
 
   - name: Context Misses
     desc: Failed context lookups should be considered falsey.
     data: { }
-    template: "[{{^missing}}Cannot find key 'missing'!{{/missing}}]"
+    template: "[<{{^missing}}>Cannot find key 'missing'!<{{/missing}}>]"
     expected: "[Cannot find key 'missing'!]"
 
   # Dotted Names
@@ -103,19 +103,19 @@ tests:
   - name: Dotted Names - Truthy
     desc: Dotted names should be valid for Inverted Section tags.
     data: { a: { b: { c: true } } }
-    template: '"{{^a.b.c}}Not Here{{/a.b.c}}" == ""'
+    template: '"<{{^a.b.c}}>Not Here<{{/a.b.c}}>" == ""'
     expected: '"" == ""'
 
   - name: Dotted Names - Falsey
     desc: Dotted names should be valid for Inverted Section tags.
     data: { a: { b: { c: false } } }
-    template: '"{{^a.b.c}}Not Here{{/a.b.c}}" == "Not Here"'
+    template: '"<{{^a.b.c}}>Not Here<{{/a.b.c}}>" == "Not Here"'
     expected: '"Not Here" == "Not Here"'
 
   - name: Dotted Names - Broken Chains
     desc: Dotted names that cannot be resolved should be considered falsey.
     data: { a: { } }
-    template: '"{{^a.b.c}}Not Here{{/a.b.c}}" == "Not Here"'
+    template: '"<{{^a.b.c}}>Not Here<{{/a.b.c}}>" == "Not Here"'
     expected: '"Not Here" == "Not Here"'
 
   # Whitespace Sensitivity
@@ -123,19 +123,19 @@ tests:
   - name: Surrounding Whitespace
     desc: Inverted sections should not alter surrounding whitespace.
     data: { boolean: false }
-    template: " | {{^boolean}}\t|\t{{/boolean}} | \n"
+    template: " | <{{^boolean}}>\t|\t<{{/boolean}}> | \n"
     expected: " | \t|\t | \n"
 
   - name: Internal Whitespace
     desc: Inverted should not alter internal whitespace.
     data: { boolean: false }
-    template: " | {{^boolean}} {{! Important Whitespace }}\n {{/boolean}} | \n"
+    template: " | <{{^boolean}}> <{{! Important Whitespace }}>\n <{{/boolean}}> | \n"
     expected: " |  \n  | \n"
 
   - name: Indented Inline Sections
     desc: Single-line sections should not alter surrounding whitespace.
     data: { boolean: false }
-    template: " {{^boolean}}NO{{/boolean}}\n {{^boolean}}WAY{{/boolean}}\n"
+    template: " <{{^boolean}}>NO<{{/boolean}}>\n <{{^boolean}}>WAY<{{/boolean}}>\n"
     expected: " NO\n WAY\n"
 
   - name: Standalone Lines
@@ -143,9 +143,9 @@ tests:
     data: { boolean: false }
     template: |
       | This Is
-      {{^boolean}}
+      <{{^boolean}}>
       |
-      {{/boolean}}
+      <{{/boolean}}>
       | A Line
     expected: |
       | This Is
@@ -157,9 +157,9 @@ tests:
     data: { boolean: false }
     template: |
       | This Is
-        {{^boolean}}
+        <{{^boolean}}>
       |
-        {{/boolean}}
+        <{{/boolean}}>
       | A Line
     expected: |
       | This Is
@@ -169,19 +169,19 @@ tests:
   - name: Standalone Line Endings
     desc: '"\r\n" should be considered a newline for standalone tags.'
     data: { boolean: false }
-    template: "|\r\n{{^boolean}}\r\n{{/boolean}}\r\n|"
+    template: "|\r\n<{{^boolean}}>\r\n<{{/boolean}}>\r\n|"
     expected: "|\r\n|"
 
   - name: Standalone Without Previous Line
     desc: Standalone tags should not require a newline to precede them.
     data: { boolean: false }
-    template: "  {{^boolean}}\n^{{/boolean}}\n/"
+    template: "  <{{^boolean}}>\n^<{{/boolean}}>\n/"
     expected: "^\n/"
 
   - name: Standalone Without Newline
     desc: Standalone tags should not require a newline to follow them.
     data: { boolean: false }
-    template: "^{{^boolean}}\n/\n  {{/boolean}}"
+    template: "^<{{^boolean}}>\n/\n  <{{/boolean}}>"
     expected: "^\n/\n"
 
   # Whitespace Insensitivity
@@ -189,5 +189,5 @@ tests:
   - name: Padding
     desc: Superfluous in-tag whitespace should be ignored.
     data: { boolean: false }
-    template: '|{{^ boolean }}={{/ boolean }}|'
+    template: '|<{{^ boolean }}>=<{{/ boolean }}>|'
     expected: '|=|'
