--- a/spec/mustache/specs/comments.yml
+++ b/spec/mustache/specs/comments.yml
@@ -10,17 +10,17 @@ tests:
   - name: Inline
     desc: Comment blocks should be removed from the template.
     data: { }
-    template: '12345{{! Comment Block! }}67890'
+    template: '12345<{{! Comment Block! }}>67890'
     expected: '1234567890'
 
   - name: Multiline
     desc: Multiline comments should be permitted.
     data: { }
     template: |
-      12345{{!
+      12345<{{!
         This is a
         multi-line comment...
-      }}67890
+      }}>67890
     expected: |
       1234567890
 
@@ -29,7 +29,7 @@ tests:
     data: { }
     template: |
       Begin.
-      {{! Comment Block! }}
+      <{{! Comment Block! }}>
       End.
     expected: |
       Begin.
@@ -40,7 +40,7 @@ tests:
     data: { }
     template: |
       Begin.
-        {{! Indented Comment Block! }}
+        <{{! Indented Comment Block! }}>
       End.
     expected: |
       Begin.
@@ -49,19 +49,19 @@ tests:
   - name: Standalone Line Endings
     desc: '"\r\n" should be considered a newline for standalone tags.'
     data: { }
-    template: "|\r\n{{! Standalone Comment }}\r\n|"
+    template: "|\r\n<{{! Standalone Comment }}>\r\n|"
     expected: "|\r\n|"
 
   - name: Standalone Without Previous Line
     desc: Standalone tags should not require a newline to precede them.
     data: { }
-    template: "  {{! I'm Still Standalone }}\n!"
+    template: "  <{{! I'm Still Standalone }}>\n!"
     expected: "!"
 
   - name: Standalone Without Newline
     desc: Standalone tags should not require a newline to follow them.
     data: { }
-    template: "!\n  {{! I'm Still Standalone }}"
+    template: "!\n  <{{! I'm Still Standalone }}>"
     expected: "!\n"
 
   - name: Multiline Standalone
@@ -69,9 +69,9 @@ tests:
     data: { }
     template: |
       Begin.
-      {{!
+      <{{!
       Something's going on here...
-      }}
+      }}>
       End.
     expected: |
       Begin.
@@ -82,9 +82,9 @@ tests:
     data: { }
     template: |
       Begin.
-        {{!
+        <{{!
           Something's going on here...
-        }}
+        }}>
       End.
     expected: |
       Begin.
@@ -93,11 +93,11 @@ tests:
   - name: Indented Inline
     desc: Inline comments should not strip whitespace
     data: { }
-    template: "  12 {{! 34 }}\n"
+    template: "  12 <{{! 34 }}>\n"
     expected: "  12 \n"
 
   - name: Surrounding Whitespace
     desc: Comment removal should preserve surrounding whitespace.
     data: { }
-    template: '12345 {{! Comment Block! }} 67890'
+    template: '12345 <{{! Comment Block! }}> 67890'
     expected: '12345  67890'
