--- a/spec/mustache/specs/partials.yml
+++ b/spec/mustache/specs/partials.yml
@@ -17,29 +17,29 @@ tests:
   - name: Basic Behavior
     desc: The greater-than operator should expand to the named partial.
     data: { }
-    template: '"{{>text}}"'
+    template: '"<{{>text}}>"'
     partials: { text: 'from partial' }
     expected: '"from partial"'
 
   - name: Failed Lookup
     desc: The empty string should be used when the named partial is not found.
     data: { }
-    template: '"{{>text}}"'
+    template: '"<{{>text}}>"'
     partials: { }
     expected: '""'
 
   - name: Context
     desc: The greater-than operator should operate within the current context.
     data: { text: 'content' }
-    template: '"{{>partial}}"'
-    partials: { partial: '*{{text}}*' }
+    template: '"<{{>partial}}>"'
+    partials: { partial: '*<{{text}}>*' }
     expected: '"*content*"'
 
   - name: Recursion
     desc: The greater-than operator should properly recurse.
     data: { content: "X", nodes: [ { content: "Y", nodes: [] } ] }
-    template: '{{>node}}'
-    partials: { node: '{{content}}<{{#nodes}}{{>node}}{{/nodes}}>' }
+    template: '<{{>node}}>'
+    partials: { node: '<{{content}}><<{{#nodes}}><{{>node}}><{{/nodes}}>>' }
     expected: 'X<Y<>>'
 
   # Whitespace Sensitivity
@@ -47,35 +47,35 @@ tests:
   - name: Surrounding Whitespace
     desc: The greater-than operator should not alter surrounding whitespace.
     data: { }
-    template: '| {{>partial}} |'
+    template: '| <{{>partial}}> |'
     partials: { partial: "\t|\t" }
     expected: "| \t|\t |"
 
   - name: Inline Indentation
     desc: Whitespace should be left untouched.
     data: { data: '|' }
-    template: "  {{data}}  {{> partial}}\n"
+    template: "  <{{data}}>  <{{> partial}}>\n"
     partials: { partial: ">\n>" }
     expected: "  |  >\n>\n"
 
   - name: Standalone Line Endings
     desc: '"\r\n" should be considered a newline for standalone tags.'
     data: { }
-    template: "|\r\n{{>partial}}\r\n|"
+    template: "|\r\n<{{>partial}}>\r\n|"
     partials: { partial: ">" }
     expected: "|\r\n>|"
 
   - name: Standalone Without Previous Line
     desc: Standalone tags should not require a newline to precede them.
     data: { }
-    template: "  {{>partial}}\n>"
+    template: "  <{{>partial}}>\n>"
     partials: { partial: ">\n>"}
     expected: "  >\n  >>"
 
   - name: Standalone Without Newline
     desc: Standalone tags should not require a newline to follow them.
     data: { }
-    template: ">\n  {{>partial}}"
+    template: ">\n  <{{>partial}}>"
     partials: { partial: ">\n>" }
     expected: ">\n  >\n  >"
 
@@ -84,12 +84,12 @@ tests:
     data: { content: "<\n->" }
     template: |
       \
-       {{>partial}}
+       <{{>partial}}>
       /
     partials:
       partial: |
         |
-        {{{content}}}
+        <{{{content}}}>
         |
     expected: |
       \
@@ -104,6 +104,6 @@ tests:
   - name: Padding Whitespace
     desc: Superfluous in-tag whitespace should be ignored.
     data: { boolean: true }
-    template: "|{{> partial }}|"
+    template: "|<{{> partial }}>|"
     partials: { partial: "[]" }
     expected: '|[]|'
