--- a/spec/mustache/specs/sections.yml
+++ b/spec/mustache/specs/sections.yml
@@ -38,19 +38,19 @@ tests:
   - name: Truthy
     desc: Truthy sections should have their contents rendered.
     data: { boolean: true }
-    template: '"{{#boolean}}This should be rendered.{{/boolean}}"'
+    template: '"<{{#boolean}}>This should be rendered.<{{/boolean}}>"'
     expected: '"This should be rendered."'
 
   - name: Falsey
     desc: Falsey sections should have their contents omitted.
     data: { boolean: false }
-    template: '"{{#boolean}}This should not be rendered.{{/boolean}}"'
+    template: '"<{{#boolean}}>This should not be rendered.<{{/boolean}}>"'
     expected: '""'
 
   - name: Context
     desc: Objects and hashes should be pushed onto the context stack.
     data: { context: { name: 'Joe' } }
-    template: '"{{#context}}Hi {{name}}.{{/context}}"'
+    template: '"<{{#context}}>Hi <{{name}}>.<{{/context}}>"'
     expected: '"Hi Joe."'
 
   - name: Deeply Nested Contexts
@@ -62,25 +62,25 @@ tests:
       d: { four: 4 }
       e: { five: 5 }
     template: |
-      {{#a}}
-      {{one}}
-      {{#b}}
-      {{one}}{{two}}{{one}}
-      {{#c}}
-      {{one}}{{two}}{{three}}{{two}}{{one}}
-      {{#d}}
-      {{one}}{{two}}{{three}}{{four}}{{three}}{{two}}{{one}}
-      {{#e}}
-      {{one}}{{two}}{{three}}{{four}}{{five}}{{four}}{{three}}{{two}}{{one}}
-      {{/e}}
-      {{one}}{{two}}{{three}}{{four}}{{three}}{{two}}{{one}}
-      {{/d}}
-      {{one}}{{two}}{{three}}{{two}}{{one}}
-      {{/c}}
-      {{one}}{{two}}{{one}}
-      {{/b}}
-      {{one}}
-      {{/a}}
+      <{{#a}}>
+      <{{one}}>
+      <{{#b}}>
+      <{{one}}><{{two}}><{{one}}>
+      <{{#c}}>
+      <{{one}}><{{two}}><{{three}}><{{two}}><{{one}}>
+      <{{#d}}>
+      <{{one}}><{{two}}><{{three}}><{{four}}><{{three}}><{{two}}><{{one}}>
+      <{{#e}}>
+      <{{one}}><{{two}}><{{three}}><{{four}}><{{five}}><{{four}}><{{three}}><{{two}}><{{one}}>
+      <{{/e}}>
+      <{{one}}><{{two}}><{{three}}><{{four}}><{{three}}><{{two}}><{{one}}>
+      <{{/d}}>
+      <{{one}}><{{two}}><{{three}}><{{two}}><{{one}}>
+      <{{/c}}>
+      <{{one}}><{{two}}><{{one}}>
+      <{{/b}}>
+      <{{one}}>
+      <{{/a}}>
     expected: |
       1
       121
@@ -95,26 +95,26 @@ tests:
   - name: List
     desc: Lists should be iterated; list items should visit the context stack.
     data: { list: [ { item: 1 }, { item: 2 }, { item: 3 } ] }
-    template: '"{{#list}}{{item}}{{/list}}"'
+    template: '"<{{#list}}><{{item}}><{{/list}}>"'
     expected: '"123"'
 
   - name: Empty List
     desc: Empty lists should behave like falsey values.
     data: { list: [ ] }
-    template: '"{{#list}}Yay lists!{{/list}}"'
+    template: '"<{{#list}}>Yay lists!<{{/list}}>"'
     expected: '""'
 
   - name: Doubled
     desc: Multiple sections per template should be permitted.
     data: { bool: true, two: 'second' }
     template: |
-      {{#bool}}
+      <{{#bool}}>
       * first
-      {{/bool}}
-      * {{two}}
-      {{#bool}}
+      <{{/bool}}>
+      * <{{two}}>
+      <{{#bool}}>
       * third
-      {{/bool}}
+      <{{/bool}}>
     expected: |
       * first
       * second
@@ -123,19 +123,19 @@ tests:
   - name: Nested (Truthy)
     desc: Nested truthy sections should have their contents rendered.
     data: { bool: true }
-    template: "| A {{#bool}}B {{#bool}}C{{/bool}} D{{/bool}} E |"
+    template: "| A <{{#bool}}>B <{{#bool}}>C<{{/bool}}> D<{{/bool}}> E |"
     expected: "| A B C D E |"
 
   - name: Nested (Falsey)
     desc: Nested falsey sections should be omitted.
     data: { bool: false }
-    template: "| A {{#bool}}B {{#bool}}C{{/bool}} D{{/bool}} E |"
+    template: "| A <{{#bool}}>B <{{#bool}}>C<{{/bool}}> D<{{/bool}}> E |"
     expected: "| A  E |"
 
   - name: Context Misses
     desc: Failed context lookups should be considered falsey.
     data: { }
-    template: "[{{#missing}}Found key 'missing'!{{/missing}}]"
+    template: "[<{{#missing}}>Found key 'missing'!<{{/missing}}>]"
     expected: "[]"
 
   # Implicit Iterators
@@ -144,28 +144,28 @@ tests:
     desc: Implicit iterators should directly interpolate strings.
     data:
       list: [ 'a', 'b', 'c', 'd', 'e' ]
-    template: '"{{#list}}({{.}}){{/list}}"'
+    template: '"<{{#list}}>(<{{.}}>)<{{/list}}>"'
     expected: '"(a)(b)(c)(d)(e)"'
 
   - name: Implicit Iterator - Integer
     desc: Implicit iterators should cast integers to strings and interpolate.
     data:
       list: [ 1, 2, 3, 4, 5 ]
-    template: '"{{#list}}({{.}}){{/list}}"'
+    template: '"<{{#list}}>(<{{.}}>)<{{/list}}>"'
     expected: '"(1)(2)(3)(4)(5)"'
 
   - name: Implicit Iterator - Decimal
     desc: Implicit iterators should cast decimals to strings and interpolate.
     data:
       list: [ 1.10, 2.20, 3.30, 4.40, 5.50 ]
-    template: '"{{#list}}({{.}}){{/list}}"'
+    template: '"<{{#list}}>(<{{.}}>)<{{/list}}>"'
     expected: '"(1.1)(2.2)(3.3)(4.4)(5.5)"'
 
   - name: Implicit Iterator - Array
     desc: Implicit iterators should allow iterating over nested arrays.
     data:
       list: [ [1, 2, 3], ['a', 'b', 'c'] ]
-    template: '"{{#list}}({{#.}}{{.}}{{/.}}){{/list}}"'
+    template: '"<{{#list}}>(<{{#.}}><{{.}}><{{/.}}>)<{{/list}}>"'
     expected: '"(123)(abc)"'
 
   # Dotted Names
@@ -173,19 +173,19 @@ tests:
   - name: Dotted Names - Truthy
     desc: Dotted names should be valid for Section tags.
     data: { a: { b: { c: true } } }
-    template: '"{{#a.b.c}}Here{{/a.b.c}}" == "Here"'
+    template: '"<{{#a.b.c}}>Here<{{/a.b.c}}>" == "Here"'
     expected: '"Here" == "Here"'
 
   - name: Dotted Names - Falsey
     desc: Dotted names should be valid for Section tags.
     data: { a: { b: { c: false } } }
-    template: '"{{#a.b.c}}Here{{/a.b.c}}" == ""'
+    template: '"<{{#a.b.c}}>Here<{{/a.b.c}}>" == ""'
     expected: '"" == ""'
 
   - name: Dotted Names - Broken Chains
     desc: Dotted names that cannot be resolved should be considered falsey.
     data: { a: { } }
-    template: '"{{#a.b.c}}Here{{/a.b.c}}" == ""'
+    template: '"<{{#a.b.c}}>Here<{{/a.b.c}}>" == ""'
     expected: '"" == ""'
 
   # Whitespace Sensitivity
@@ -193,19 +193,19 @@ tests:
   - name: Surrounding Whitespace
     desc: Sections should not alter surrounding whitespace.
     data: { boolean: true }
-    template: " | {{#boolean}}\t|\t{{/boolean}} | \n"
+    template: " | <{{#boolean}}>\t|\t<{{/boolean}}> | \n"
     expected: " | \t|\t | \n"
 
   - name: Internal Whitespace
     desc: Sections should not alter internal whitespace.
     data: { boolean: true }
-    template: " | {{#boolean}} {{! Important Whitespace }}\n {{/boolean}} | \n"
+    template: " | <{{#boolean}}> <{{! Important Whitespace }}>\n <{{/boolean}}> | \n"
     expected: " |  \n  | \n"
 
   - name: Indented Inline Sections
     desc: Single-line sections should not alter surrounding whitespace.
     data: { boolean: true }
-    template: " {{#boolean}}YES{{/boolean}}\n {{#boolean}}GOOD{{/boolean}}\n"
+    template: " <{{#boolean}}>YES<{{/boolean}}>\n <{{#boolean}}>GOOD<{{/boolean}}>\n"
     expected: " YES\n GOOD\n"
 
   - name: Standalone Lines
@@ -213,9 +213,9 @@ tests:
     data: { boolean: true }
     template: |
       | This Is
-      {{#boolean}}
+      <{{#boolean}}>
       |
-      {{/boolean}}
+      <{{/boolean}}>
       | A Line
     expected: |
       | This Is
@@ -227,9 +227,9 @@ tests:
     data: { boolean: true }
     template: |
       | This Is
-        {{#boolean}}
+        <{{#boolean}}>
       |
-        {{/boolean}}
+        <{{/boolean}}>
       | A Line
     expected: |
       | This Is
@@ -239,19 +239,19 @@ tests:
   - name: Standalone Line Endings
     desc: '"\r\n" should be considered a newline for standalone tags.'
     data: { boolean: true }
-    template: "|\r\n{{#boolean}}\r\n{{/boolean}}\r\n|"
+    template: "|\r\n<{{#boolean}}>\r\n<{{/boolean}}>\r\n|"
     expected: "|\r\n|"
 
   - name: Standalone Without Previous Line
     desc: Standalone tags should not require a newline to precede them.
     data: { boolean: true }
-    template: "  {{#boolean}}\n#{{/boolean}}\n/"
+    template: "  <{{#boolean}}>\n#<{{/boolean}}>\n/"
     expected: "#\n/"
 
   - name: Standalone Without Newline
     desc: Standalone tags should not require a newline to follow them.
     data: { boolean: true }
-    template: "#{{#boolean}}\n/\n  {{/boolean}}"
+    template: "#<{{#boolean}}>\n/\n  <{{/boolean}}>"
     expected: "#\n/\n"
 
   # Whitespace Insensitivity
@@ -259,5 +259,5 @@ tests:
   - name: Padding
     desc: Superfluous in-tag whitespace should be ignored.
     data: { boolean: true }
-    template: '|{{# boolean }}={{/ boolean }}|'
+    template: '|<{{# boolean }}>=<{{/ boolean }}>|'
     expected: '|=|'
