--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "handlebars",
-  "barename": "handlebars",
+  "name": "plntr-handlebars",
+  "barename": "plntr-handlebars",
   "version": "4.0.5",
   "description": "Handlebars provides the power necessary to let you build semantic templates effectively with no frustration",
   "homepage": "http://www.handlebarsjs.com/",
