--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/wycats/handlebars.js.git"
+    "url": "https://github.com/PlanitarInc/handlebars.js.git"
   },
   "author": "Yehuda Katz",
   "license": "MIT",
